EDIT/src/js/exhibition + ExampleExhibit.js: implement back button

--- a/src/sass/ExampleExhibit.sass
+++ b/src/sass/ExampleExhibit.sass
@@ -15,3 +15,9 @@ canvas:focus
   right: 100px
   bottom: 100px
   z-index: 999
+
+button
+  z-index: 99
+  position: fixed
+  left: 50px
+  top: 50px
