WIP/src/js/lobby.js: connecting mixing-senses.art via API

--- a/src/sass/exhibition.sass
+++ b/src/sass/exhibition.sass
@@ -45,6 +45,7 @@ $font-root: "../../assets/fonts"
   pointer-events: all
   padding: 80px 200px 80px 80px
   overflow: scroll-y
+  height: 100vh
   &.out
     transform: translateX(-100%)
 
