--- a/src/sass/exhibition.sass
+++ b/src/sass/exhibition.sass
@@ -27,6 +27,7 @@ $font-root: "../../assets/fonts"
 
 /* 5. Objects - cosmetic-free design patterns
 @import ./rouge/5-objects/_button.send.sass
+@import ./rouge/5-objects/_btn.sass
 
 /*** ----------- LOCAL STYLES --------------------------------------------------
 .meta
