WIP: parsing + layouting content blocks

--- a/src/sass/exhibition.sass
+++ b/src/sass/exhibition.sass
@@ -30,6 +30,11 @@ $font-root: "../../assets/fonts"
 @import ./rouge/5-objects/_btn.sass
 
 /*** ----------- LOCAL STYLES --------------------------------------------------
+@import ./_headings.sass
+
+body
+  line-height: 2.2
+
 .meta
   position: relative
   z-index: 999
