--- a/src/sass/_blocks.sass
+++ b/src/sass/_blocks.sass
@@ -14,7 +14,7 @@
   display: flex
   flex-direction: row
   justify-content: center
-  align-items: flex-end
+  align-items: flex-start
   .left-side
     width: 60%
     padding: 0 2rem 0 0
