--- a/src/sass/Foyer.sass
+++ b/src/sass/Foyer.sass
@@ -15,15 +15,22 @@
     canvas
       position: absolute
 
-    .sentence
+    .sentence-wrapper
+      width: 100vw
+      text-align: center
       display: flex
       position: absolute
-      top: 5vh
-      transition: opacity 300ms ease
-      &.hide
-        opacity: 0
-      &.show
-        opacity: 1
+      top: 10vh
+      justify-content: center
+      width: 100ch
+
+      .sentence
+        transition: opacity 300ms ease
+        line-height: 1.0
+        &.hide
+            opacity: 0
+        &.show
+            opacity: 1
 
     .button-wrapper
       position: absolute
