--- a/src/sass/Foyer.sass
+++ b/src/sass/Foyer.sass
@@ -13,7 +13,9 @@
     justify-content: flex-end
     cursor: pointer
     canvas
-      position: absolute
+      flex-grow: 1
+      width: 100vw
+      height: 100vh
 
     .sentence-wrapper
       width: 100vw
