--- a/src/sass/Foyer.sass
+++ b/src/sass/Foyer.sass
@@ -45,10 +45,23 @@
         position: static
         display: flex
 
+  .top-logo-wrapper
+    z-index: 999
+    position: absolute
+    top: 60px
+    opacity: 0.2
+    display: flex
+    flex-direction: column
+    line-height: 1.0
+
   .content
     z-index: +99
     display: inline-block
     padding: 60px 120px 200px
+    width: 80vw
+    margin: 0 auto
+    display: grid
+    grid-gap: 30px
 
   .exhibition-entry
     height: 200px
@@ -74,7 +87,7 @@
         cursor: default
 
     .title-image
-      width: 30vw
+      width: 300px
       height: 100%
       background-size: cover
       background-position: center
