--- a/src/sass/foyer/Footer.sass
+++ b/src/sass/foyer/Footer.sass
@@ -12,15 +12,22 @@
       margin-left: 10px
       opacity: 0.75
 
-
   .legal
     width: 30ch
     margin-top: 120px
     padding-top: 50px
     border-top: 1px solid var(--color-dirtysnow)
 
+  .logo-wrapper
+    width: 100%
+    opacity: 0.2
+    display: flex
+    justify-content: center
+    margin-top: 120px
+    svg
+      transform: scale(0.75)
+
   .copyright
     width: 100%
     text-align: center
-    margin-top: 120px
     color: var(--color-dirtysnow)
