--- a/src/sass/Foyer.sass
+++ b/src/sass/Foyer.sass
@@ -1,3 +1,10 @@
+.canvas
+  position: absolute
+  width: 100%
+  height: 100%
+  top: 0
+  left: 0
+
 .foyer
   display: flex
   flex-direction: column
