WIP/src/sass: structure directories

--- a/src/sass/ExhibitionLayout.sass
+++ b/src/sass/ExhibitionLayout.sass
@@ -4,7 +4,12 @@
   .button-back
     position: auto
     margin-bottom: 200px
-    display: inline-block
+    display: inline-flex
+    color: var(--color-darkness)
+    justify-content: center
+    align-items: center
+    .text
+      margin-left: 20px
 
   section
     margin: 0 0 120px 0
