FIX/src/sass/foyer/Footer.sass: icon size on Chrome

--- a/src/sass/foyer/Footer.sass
+++ b/src/sass/foyer/Footer.sass
@@ -22,6 +22,9 @@
           align-items: center
           width: 24px
           height: 24px
+          svg
+            width: 24px
+            height: 24px
           &:hover
             svg
               fill: var(--color-curacao)
