--- a/src/sass/_blocks.sass
+++ b/src/sass/_blocks.sass
@@ -44,3 +44,17 @@
     box-shadow: 0 1.5vw 3vw rgba(0, 0, 0, 0.1)
     border-radius: 2px
     border: 30px solid white
+
+.block-video-embed
+  .grid
+    display: grid
+    grid-template-columns: 60% 40%
+    grid-gap: 40px
+  .iframe-wrapper
+    position: relative
+    width: 100%
+    height: auto
+    iframe
+      width: 100%
+      height: 100%
+      position: absolute
