FIX #8: ADD/HyperlinkBlock

--- a/src/sass/_blocks.sass
+++ b/src/sass/_blocks.sass
@@ -58,3 +58,16 @@
       width: 100%
       height: 100%
       position: absolute
+
+.block-hyperlinks
+  .flex
+    display: flex
+    flex-direction: column
+  .link
+    background: var(--color-darkness)
+    display: inline-table
+    color: var(--color-snow)
+    margin-bottom: 5px
+    padding: 0 10px
+    &:hover
+      background: var(--color-curacao)
