--- a/src/sass/Foyer.sass
+++ b/src/sass/Foyer.sass
@@ -1,3 +1,26 @@
+@keyframes fadeIn
+  0%
+    opacity: 0
+  100%
+    opacity: 1.0
+
+@keyframes fadeInFromTop
+  0%
+    opacity: 0
+    transform: translateY(-5px)
+  100%
+    opacity: 0.6
+    transform: translateY(0)
+
+@keyframes fadeOut
+  0%
+    opacity: 1
+    transform: translateY(0)
+  100%
+    opacity: 0.0
+    transform: translateY(10px)
+
+
 .canvas
   position: absolute
   width: 100%
@@ -56,10 +79,31 @@
     z-index: 999
     position: absolute
     top: 60px
-    opacity: 0.2
     display: flex
     flex-direction: column
     line-height: 1.0
+
+  .instruction
+    position: fixed
+    top: calc(100vh - 120px)
+    left: 50px
+    display: flex
+    align-items: center
+    font-family: Space Mono
+    color: var(--color-snow)
+    svg
+      opacity: 0.0
+      animation: fadeInFromTop 0.5s 3s ease
+      animation-fill-mode: forwards
+    &.learned
+      animation: fadeOut 1s 1s ease
+      animation-fill-mode: forwards
+    span
+      opacity: 0.0
+      animation: fadeIn 0.5s 5s ease
+      animation-fill-mode: forwards
+      max-width: 20ch
+      line-height: 1.4
 
   .content
     z-index: +99
