EDIT/src/js/layouts/ExhibitionLayout: introduce CiteBlock

--- a/src/sass/ExhibitionLayout.sass
+++ b/src/sass/ExhibitionLayout.sass
@@ -3,11 +3,14 @@
 .layout-exhibition
   .button-back
     position: auto
-    margin-bottom: 200px
+    margin-bottom: 50px
     display: inline-flex
     color: var(--color-darkness)
     justify-content: center
     align-items: center
+    transition: color 0.5s ease
+    &:hover
+      color: var(--color-curacao)
     .text
       margin-left: 20px
 
