--- a/src/sass/Foyer.sass
+++ b/src/sass/Foyer.sass
@@ -1,9 +1,19 @@
+@keyframes fadeInButtons
+  0%
+    opacity: 0
+    transform: translateY(-30px)
+  100%
+    opacity: 1
+    transform: translateY(0)
+
+
 @keyframes fadeIn
   0%
     opacity: 0
   100%
     opacity: 1.0
 
+    
 @keyframes fadeInFromTop
   0%
     opacity: 0
@@ -12,6 +22,7 @@
     opacity: 0.6
     transform: translateY(0)
 
+    
 @keyframes fadeOut
   0%
     opacity: 1
@@ -65,6 +76,9 @@
             opacity: 1
 
     .button-wrapper
+      animation: fadeInButtons 1s 10s ease
+      animation-fill-mode: forwards
+      opacity: 0
       position: absolute
       width: 100vw
       top: 85vh
