EDIT/src/js: improve UI + ADD/PodcastBlock

--- a/src/sass/_blocks.sass
+++ b/src/sass/_blocks.sass
@@ -97,3 +97,16 @@
       font-size: 1.375rem
       margin-left: 20px
       color: var(--color-darkness)
+
+.block-podcast
+  width: 100%
+  height: auto
+  display: inline-flex
+  box-shadow: 0 50px 80px var(--color-litte-peacock-40)
+  overflow: hidden
+  border-radius: 4px
+  background: var(--color-litte-peacock)
+  iframe
+    margin-bottom: -10px
+  .player
+    width: 100%
