--- a/src/sass/exhibitions/ArtworkWrapper.sass
+++ b/src/sass/exhibitions/ArtworkWrapper.sass
@@ -3,6 +3,8 @@
 $offset: 10vh
 
 .artwork-wrapper
+  background: white
+
   .meta
     position: relative
     z-index: 999
@@ -21,22 +23,6 @@ $offset: 10vh
       background: white
       &.out
         transform: translateX(calc(-100%))
-
-      /* article
-      /*   margin: 40px 0
-
-      /* h4
-      /*   margin-bottom: 40px
-
-      /* small
-      /*   font-size: 0.8rem
-      /*   line-height: 1.6
-
-      /* img
-      /*   width: 50%
-      /*   margin: 60px 0
-      /*   border-radius: 3px
-      /*   box-shadow: 10px 0 50px rgba(0, 0, 0, 0.4)
 
     .right
       grid-column: 3
