--- a/src/sass/exhibitions/ArtworkWrapper.sass
+++ b/src/sass/exhibitions/ArtworkWrapper.sass
@@ -44,6 +44,8 @@ $offset: 10vh
       transition: transform 1s ease
       transform: translateY(0)
       pointer-events: all
+      display: grid
+      grid-template-columns: 1fr 1fr
       &.out
         transform: translateY(calc(-100%))
 
