--- a/src/sass/Foyer.sass
+++ b/src/sass/Foyer.sass
@@ -132,12 +132,28 @@
   .header-text
     color: var(--color-ultradark)
     grid-column: span 2
-    .heading
-      color: var(--color-ultradark)
+    display: flex
+    flex-direction: column
+    .museum-title
+      text-align: center
+      color: var(--color-curacao)
+    .museum-subtitle
+      color: var(--color-darkness)
+      line-height: 1.2
+      font-size: 1.375rem
+      text-align: center
+      max-width: 80ch
+      margin: 0 auto
+      font-family: Space Mono
+    .intro-text
+      margin: 50px 0
+      align-self: center
+      max-width: 100ch
 
   .exhibition-entry
     height: 200px
-    display: flex
+    display: grid
+    grid-template-columns: 200px auto
     margin-bottom: 10px
     border-radius: 10px
     transition: box-shadow 600ms ease
@@ -152,13 +168,16 @@
       box-shadow: 0 80px 120px var(--color-dirtysnow-20)
 
     &.meta
+      grid-template-columns: 1fr
       background-color: var(--color-curacao)
       &:hover
         box-shadow: 0 80px 120px var(--color-curacao-40)
       .column
-        .title,
-        article
+        .title
           color: var(--color-snow)
+        .shortdescription
+          color: var(--color-snow)
+          text-align: left
 
 
     &.draft
@@ -170,7 +189,6 @@
         cursor: default
 
     .title-image
-      width: 30%
       height: 100%
       background-size: cover
       background-position: center
@@ -184,6 +202,8 @@
       align-items: flex-start
       flex-grow: 1
       height: 100%
-      .title,
-      article
+      .title
         color: var(--color-darkness)
+      .shortdescription
+        color: var(--color-darkness)
+        text-align: left
