UPDATE/src/artworks/logo, EDIT/src/Footer: feedback hint

--- a/src/sass/foyer/Footer.sass
+++ b/src/sass/foyer/Footer.sass
@@ -29,6 +29,18 @@
             svg
               fill: var(--color-curacao)
 
+  .feedback-hint
+    max-width: 60ch
+    margin-bottom: 40px
+    .text
+      margin-bottom: 30px
+    .btn-feedback
+      padding: 20px
+      background: var(--color-darkness)
+      color: var(--color-snow)
+      &:hover
+        background: var(--color-curacao)
+
   .legal
     width: 30ch
     margin-top: 120px
