EDIT/src/js/foyer/Footer.js: add version information to footer

--- a/src/sass/foyer/Footer.sass
+++ b/src/sass/foyer/Footer.sass
@@ -60,3 +60,12 @@
     width: 100%
     text-align: center
     color: var(--color-dirtysnow)
+
+  .version
+    display: flex
+    flex-direction: column
+    margin-top: 40px
+    opacity: 0.3
+    transition: opacity 500ms ease
+    &:hover
+      opacity: 1.0
