--- a/src/sass/museum.sass
+++ b/src/sass/museum.sass
@@ -28,3 +28,9 @@ $font-root: "../../assets/fonts"
 /* 5. Objects - cosmetic-free design patterns
 @import @vi.son/rouge/5-objects/_button.send.sass
 @import @vi.son/rouge/5-objects/_btn.sass
+
+#mount
+  position: absolute
+  max-width: 100vw
+  width: 100vw
+  overflow-x: hidden
