DEL/src/sass: remove old styles, EDIT/src/js: improve responsive design
- integrate @vi.son/components
- update @vi.son/rouge

--- a/src/sass/6-components/Footer.sass
+++ b/src/sass/6-components/Footer.sass
@@ -4,7 +4,7 @@
 .foyer-footer
   display: flex
   flex-direction: column
-  line-height: 1.2
+  line-height: 2.2
   padding: 60px 30px 100px
   +from($tablets)
     padding: 60px 20vw 200px
@@ -14,7 +14,7 @@
     display: grid
     grid-template-columns: repeat(1, 1fr)
     grid-gap: 20px
-    +from($tablets)
+    +from($desktops)
       grid-template-columns: repeat(2, 1fr)
       grid-gap: 60px
     .list
