--- a/src/sass/museum.sass
+++ b/src/sass/museum.sass
@@ -28,6 +28,7 @@ $font-root: "../../assets/fonts"
 /* 5. Objects - cosmetic-free design patterns
 @import @vi.son/rouge/5-objects/_button.send.sass
 @import @vi.son/rouge/5-objects/_btn.sass
+@import @vi.son/rouge/5-objects/_emoji.sass
 
 #mount
   position: absolute
