FIX/Footer.js: adjust insta handle for kalangu, WIP/Foyer.js

--- a/src/sass/6-components/Foyer.sass
+++ b/src/sass/6-components/Foyer.sass
@@ -102,6 +102,11 @@
     display: flex
     flex-direction: column
     line-height: 1.0
+    +until($tablets)
+      top: -10px
+      svg
+        transform: scale(0.65)
+
 
   .instruction
     position: absolute
